Changes for 3.4.2rc1

New features:

Bug fixes:
..F....... [ZBX-11887] fixed improper DB::refreshIds() call when selected row is locked (miks)
........S. [ZBX-12618] fixed memory related bugs in item preprocessing (vjaceslavs)
..F....... [ZBX-12022] fixed trigger resolving in services configuration; fixed popup window size (miks)
..F....... [ZBX-12396] fixed an error in screens if screen trigger overview element contains deleted host group (miks)
..F....... [ZBX-12429] fixed template replacement in mass update form (gcalenko)

--------------------------------------------------------------------------------
Changes for 3.4.1

3.4.1rc2 was released as 3.4.1 without any changes

--------------------------------------------------------------------------------
Changes for 3.4.1rc2

Bug fixes:
..F....... [ZBX-12600] fixed display of previously opened dashboard (vmurzins)
..F....... [ZBX-12602] fixed displaying of graphs in the dashboard widgets; fixed displaying of the right axis in the graph test form (Sasha)

--------------------------------------------------------------------------------
Changes for 3.4.1rc1

New features:
A.F....... [ZBX-1357] updated Czech, English (United States), French, Italian, Japanese, Korean, Portuguese (Brazil), Russian, Ukrainian translations; thanks to Zabbix translators (zalex_ua)

Bug fixes:
..F....... [ZBX-12598] fixed an unneeded data sharing to map widget on navigation tree refresh (miks)
.......PS. [ZBX-12549] fixed requeueing of items from unreachable poller to normal poller (gleb, wiper)
..F....... [ZBX-12539] fixed sbox selection zone in monitoring web graphs (miks)
........S. [ZBX-12581] fixed crash when syncing actions without operations (wiper)
..F....... [ZBX-12531] removed usage of SVG viewBox attribute in IE and disabled map scaling in screens (miks)
..F....... [ZBXNEXT-3987] fixed wrong response and error message when invalid or unavailable dashboardid has been requested (miks)