@@ -69,7 +69,13 @@ class CXmlExportWriter extends CExportWriter {
 				$this->fromArray($value, $name);
 			}
 			elseif (!zbx_empty($value)) {
-				$this->xmlWriter->text($value);
+				// Value containing only whitespace characters should be saved as CDATA.
+				if (trim($value) === '') {
+					$this->xmlWriter->writeCData($value);
+				}
+				else {
+					$this->xmlWriter->text($value);
+				}
 			}
 
 			$this->xmlWriter->endElement();
